--- a/index.html
+++ b/index.html
@@ -3,46 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cassidy Stagnitti</title>
+    <title>Your Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Cassidy Stagnitti</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#resume">Resume</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#certifications">Certifications</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-    <main>
-        <section id="about">
-            <h2>About Cassidy</h2>
-            <p>Insert your content about Cassidy here.</p>
-        </section>
-        <section id="resume">
-            <h2>Resume</h2>
-            <p>Insert Cassidy's resume information here.</p>
-        </section>
-        <section id="projects">
-            <h2>Projects</h2>
-            <p>Insert Cassidy's projects information here.</p>
-        </section>
-        <section id="certifications">
-            <h2>Certifications</h2>
-            <p>Insert Cassidy's certifications information here.</p>
-        </section>
-        <section id="contact">
-            <h2>Contact Cassidy</h2>
-            <p>Insert contact information or a contact form here.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Cassidy Stagnitti. All rights reserved.</p>
-    </footer>
+    <div class="container">
+        <header>
+            <nav id="navbar">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <!-- Your content goes here -->
+        </main>
+        <footer>
+            <!-- Footer content -->
+        </footer>
+    </div>
 </body>
 </html>
