--- a/index.html
+++ b/index.html
@@ -8,23 +8,18 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <nav id="navbar">
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
+        <nav class="sidebar">
+            <ul>
+                <li><a href="page1.html">Page 1</a></li>
+                <li><a href="page2.html">Page 2</a></li>
+                <li><a href="page3.html">Page 3</a></li>
+                <li><a href="page4.html">Page 4</a></li>
+            </ul>
+        </nav>
         <main>
-            <!-- Your content goes here -->
+            <h1>Welcome to Page 1</h1>
+            <p>This is the content of Page 1.</p>
         </main>
-        <footer>
-            <!-- Footer content -->
-        </footer>
     </div>
 </body>
 </html>
