--- a/index.html
+++ b/index.html
@@ -3,23 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website</title>
+    <title>Cassidy's Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <nav class="sidebar">
+    <header>
+        <h1>Welcome to Cassidy's Website</h1>
+        <nav>
             <ul>
-                <li><a href="page1.html">Page 1</a></li>
-                <li><a href="page2.html">Page 2</a></li>
-                <li><a href="page3.html">Page 3</a></li>
-                <li><a href="page4.html">Page 4</a></li>
+                <li><a href="#">Button 1</a></li>
+                <li><a href="#">Button 2</a></li>
+                <li><a href="#">Button 3</a></li>
             </ul>
         </nav>
-        <main>
-            <h1>Welcome to Page 1</h1>
-            <p>This is the content of Page 1.</p>
-        </main>
-    </div>
+    </header>
+    <main>
+        <p>Cassidy</p>
+        <!-- Repeat the word "dog" 20 times -->
+        <p>Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog</p>
+    </main>
 </body>
 </html>
