--- a/index.html
+++ b/index.html
@@ -8,19 +8,28 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Cassidy's Website</h1>
         <nav>
             <ul>
-                <li><a href="#">Button 1</a></li>
-                <li><a href="#">Button 2</a></li>
-                <li><a href="#">Button 3</a></li>
+                <li><a href="#section1">Button 1</a></li>
+                <li><a href="#section2">Button 2</a></li>
+                <li><a href="#section3">Button 3</a></li>
             </ul>
         </nav>
+        <h1>Welcome to Cassidy's Website</h1>
     </header>
     <main>
-        <p>Cassidy</p>
-        <!-- Repeat the word "dog" 20 times -->
-        <p>Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog Dog</p>
+        <section id="section1" class="section">
+            <h2>Button 1 Section</h2>
+            <p>Content for Button 1 Section.</p>
+        </section>
+        <section id="section2" class="section">
+            <h2>Button 2 Section</h2>
+            <p>Content for Button 2 Section.</p>
+        </section>
+        <section id="section3" class="section">
+            <h2>Button 3 Section</h2>
+            <p>Content for Button 3 Section.</p>
+        </section>
     </main>
 </body>
 </html>
