--- a/index.html
+++ b/index.html
@@ -7,29 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+
+<header>
+    <div class="container">
         <nav>
             <ul>
-                <li><a href="#section1">Button 1</a></li>
-                <li><a href="#section2">Button 2</a></li>
-                <li><a href="#section3">Button 3</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Resume</a></li>
+                <li><a href="#">Certifications</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <h1>Welcome to Cassidy's Website</h1>
-    </header>
-    <main>
-        <section id="section1" class="section">
-            <h2>Button 1 Section</h2>
-            <p>Content for Button 1 Section.</p>
-        </section>
-        <section id="section2" class="section">
-            <h2>Button 2 Section</h2>
-            <p>Content for Button 2 Section.</p>
-        </section>
-        <section id="section3" class="section">
-            <h2>Button 3 Section</h2>
-            <p>Content for Button 3 Section.</p>
-        </section>
-    </main>
+       
 </body>
 </html>
