--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
      
 <main>
-  <section id="home">
+  <section id="Home">
     <h1>Welcome to My Portfolio</h1>
     <p>A showcase of my work and skills</p>
     <a href="#home" class="cta-button">View Portfolio</a>
