--- a/index.html
+++ b/index.html
@@ -1,48 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cassidy's Website</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-<header>
-    <div class="container">
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Resume</a></li>
-                <li><a href="#">Certifications</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-     
-<main>
-  <section id="Home">
-    <h1>Welcome to My Portfolio</h1>
-    <p>A showcase of my work and skills</p>
-    <a href="#home" class="cta-button">View Portfolio</a>
-  </section>
-  <section id="About">
-    <h2>About Me</h2>
-    <p>Insert your about me content here</p>
-  </section>
-  <section id="Resume">
-    <h2>Services</h2>
-    <p>Insert your services content here</p>
-  </section>
-  <section id="Certifications">
-    <h2>Portfolio</h2>
-    <p>Insert your portfolio content here</p>
-  </section>
-  <section id="Contact">
-    <h2>Contact Me</h2>
-    <p>Insert your contact information and form here</p>
-  </section>
-</main>
-        
-</body>
-</html>
+<!DOCTYPE html><html><head><link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" /><link href="./css/main.css" rel="stylesheet" /><title>Document</title></head><body><div class="v406_3"><div class="v408_2"></div><span class="v408_5">Cassidy Stagnitti</span><div class="v408_11"><div class="v408_6"></div><div class="v408_7"></div><div class="v408_8"></div><div class="v408_9"></div><div class="v408_10"></div><div class="name"></div></div><div class="v408_17"></div><div class="v408_19"></div><div class="v408_20"></div><span class="v408_21">About Me</span><span class="v408_25">Good at design and stuff</span><div class="v408_26"></div><div class="v408_23"></div></div></body></html>
