--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!DOCTYPE html><html><head><link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" /><link href="./css/main.css" rel="stylesheet" /><title>Document</title></head><body><div class="v406_3"><div class="v408_2"></div><span class="v408_5">Cassidy Stagnitti</span><div class="v408_11"><div class="v408_6"></div><div class="v408_7"></div><div class="v408_8"></div><div class="v408_9"></div><div class="v408_10"></div><div class="name"></div></div><div class="v408_17"></div><div class="v408_19"></div><div class="v408_20"></div><span class="v408_21">About Me</span><span class="v408_25">Good at design and stuff</span><div class="v408_26"></div><div class="v408_23"></div></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Saying Hi</title>
+</head>
+<body>
+    <h1>Hi!</h1>
+</body>
+</html>
