--- a/index.html
+++ b/index.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saying Hi</title>
+    <title>Cassidy's Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hi!</h1>
+
+<header>
+    <div class="container">
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Resume</a></li>
+                <li><a href="#">Certifications</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+     
+<main>
+  <section id="Home">
+    <h1>Welcome to My Portfolio</h1>
+    <p>A showcase of my work and skills</p>
+    <a href="#home" class="cta-button">View Portfolio</a>
+  </section>
+  <section id="About">
+    <h2>About Me</h2>
+    <p>Insert your about me content here</p>
+  </section>
+  <section id="Resume">
+    <h2>Services</h2>
+    <p>Insert your services content here</p>
+  </section>
+  <section id="Certifications">
+    <h2>Portfolio</h2>
+    <p>Insert your portfolio content here</p>
+  </section>
+  <section id="Contact">
+    <h2>Contact Me</h2>
+    <p>Insert your contact information and form here</p>
+  </section>
+</main>
+        
 </body>
 </html>
