--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cassidy's Website</title>
+    <title>Cassidy Stagnitti</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-    <div class="container"
-        <h1>Cassidy Stagnitti</div>h1>
-</header>
+<div class="navbar">
+  <a href="#Cassidy Stagnitti" class="active">Home</a>
+  <a href="#About Me">About</a>
+  <a href="#Resume">Resume</a>
+  <a href="#Contact">Contact</a>
+</div>
     
 <main>
   <section id="Home">
@@ -26,28 +28,12 @@
     <h2>Services</h2>
     <p>Insert your services content here</p>
   </section>
-  <section id="Certifications">
-    <h2>Portfolio</h2>
-    <p>Insert your portfolio content here</p>
-  </section>
   <section id="Contact">
     <h2>Contact Me</h2>
     <p>Insert your contact information and form here</p>
   </section>
 </main>
 
-<footer>
-    <div class="container"
-         <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Resume</a></li>
-                <li><a href="#">Certifications</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-</footer>
         
 </body>
 </html>
