--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <script src="script.js"></script>
 </head>
 <body>
+
+<div class="hero-image">
+  <div class="hero-text">
+    <h1>Cassidy Stagnitti</h1>
+    <p>Product Management and Design</p>
+    <button>Contact</button>
+  </div>
+</div>
+
 <div class="navbar">
   <a href="#Cassidy Stagnitti" class="active">Home</a>
   <a href="#About Me">About</a>
