--- a/index.html
+++ b/index.html
@@ -18,12 +18,26 @@
 </div>
 
 <div class="navbar">
-  <a href="#Cassidy Stagnitti" class="active">Home</a>
+  <a href="#Cassidy Stagnitti" class="active">Cassid Stagnitti</a>
   <a href="#About Me">About</a>
   <a href="#Resume">Resume</a>
   <a href="#Contact">Contact</a>
 </div>
 
+<div class="content">
+  <h2>About Me</h2>
+  <p> I am a technology professional with a passion for product design. 
+      I’ve worked for tech startup for 4 years and enjoy the fast paces,
+      collaborative environment involved in startups. I’ve taken courses 
+      on design,  coding, and UI.  </p>
+</div>
+<hr>
+
+<div class="content">
+    <h2>Resume</h2>
+    <p>I've worked at Ten Percent Happier for 4 years now.</p>
+</div>
+<hr>
 
 </body>
 </html>
