--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="hero-image">
   <div class="hero-text">
-    <h1>Cassidy Stagnitti</h1>
+    <h1> style="font-size:80px;">Cassidy Stagnitti</h1>
     <p>Product Management and Design</p>
     <button>Contact</button>
   </div>
