--- a/index.html
+++ b/index.html
@@ -35,7 +35,18 @@
 
 <div class="content">
     <h2>Resume</h2>
-    <p>I've worked at Ten Percent Happier for 4 years now.</p>
+    <table>
+        <colgroup> 
+          <td>TPH</td>
+          <td>EEV></td>
+        </colgroup>
+        <tr>
+            <td>SOMETHING else</td>
+            <td>Growing job</td>
+        </tr>
+    </table>
+        
+    </table>
 </div>
 <hr>
 
