--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 <div class="navbar">
   <a href="#Cassidy Stagnitti" class="active">Cassid Stagnitti</a>
-  <a href="#About Me">About</a>
-  <a href="#Resume">Resume</a>
+  <a href="#About">About</a>
+  <a href="#Experince">Experience</a>
   <a href="#Contact">Contact</a>
 </div>
 
@@ -34,18 +34,20 @@
 <hr>
 
 <div class="content">
-    <h2>Resume</h2>
+    <h2>Experience and Skills</h2>
     <table>
-        <colgroup> 
-          <td>TPH</td>
-          <td>EEV></td>
-        </colgroup>
-        <tr>
-            <td>SOMETHING else</td>
-            <td>Growing job</td>
+        <tr> 
+          <td>Ten Percent Happier</td>
+          <td>UI UX at <br>Dribbble Academy</td>
         </tr>
-    </table>
-        
+        <tr>
+            <td>AWS Basics at<br>Cloud Academy</td>
+            <td>SQL Basics at CodeAcademy</td>
+        </tr>
+        <tr>   
+            <td>Glenville BioSoil Farm</td>
+            <td>Ellison Estate Vineyards</td> 
+        </tr> 
     </table>
 </div>
 <hr>
