--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </tr>
         <tr>
             <td>AWS Basics at<br>Cloud Academy</td>
-            <td>SQL Basics at CodeAcademy</td>
+            <td>SQL Basics at<br>CodeAcademy</td>
         </tr>
         <tr>   
             <td>Glenville BioSoil Farm</td>
