--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
 </div>
 
-<div class="navbar">
+<div id="navbar">
   <a href="#Cassidy Stagnitti" class="active">Cassid Stagnitti</a>
   <a href="#About">About</a>
   <a href="#Experince">Experience</a>
