--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div class="hero-image">
+<div id="Cassidy Stagnitti" class="hero-image">
   <div class="hero-text">
     <h1>Cassidy Stagnitti</h1>
     <p>Product Management and Design</p>
@@ -18,14 +18,14 @@
 </div>
 
 <div id="navbar">
-  <a href="#Cassidy Stagnitti" class="active">Cassid Stagnitti</a>
+  <a href="#Cassidy Stagnitti">Cassid Stagnitti</a>
   <a href="#About">About</a>
-  <a href="#Experince">Experience</a>
+  <a href="#Experience">Experience</a>
   <a href="#Contact">Contact</a>
 </div>
 
 <div class="content">
-  <h2>About Me</h2>
+  <h2 id="About">About Me</h2>
   <p> I am a technology professional with a passion for product design. 
       I’ve worked for tech startup for 4 years and enjoy the fast paces,
       collaborative environment involved in startups. I’ve taken courses 
@@ -34,7 +34,7 @@
 <hr>
 
 <div class="content">
-    <h2>Experience and Skills</h2>
+    <h2 id="Experience">Experience and Skills</h2>
     <table>
         <tr> 
           <td>Ten Percent Happier</td>
