--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <div id="Cassidy Stagnitti" class="hero-image">
   <div class="hero-text">
-    <h1>Cassidy Stagnitti</h1>
+    <h1 id="cassidy">Cassidy</h1>
+    <h1 id="stagnitti">Stagnitti</h1>
     <p>Product Management and Design</p>
     <button>Contact</button>
   </div>
