--- a/index.html
+++ b/index.html
@@ -13,29 +13,40 @@
   <div class="hero-text">
     <h1 id="cassidy">Cassidy</h1>
     <h1 id="stagnitti">Stagnitti</h1>
-    <p>Product Management and Design</p>
-    <button>Contact</button>
+    <p id="PMD">Product Management and Design</p>
   </div>
 </div>
 
 <div id="navbar">
-  <a href="#Cassidy Stagnitti">Cassid Stagnitti</a>
-  <a href="#About">About</a>
-  <a href="#Experience">Experience</a>
-  <a href="#Contact">Contact</a>
+  <a href="#Cassidy Stagnitti">CASSIDY STAGNITTI</a>
+  <a href="#About">ABOUT</a>
+  <a href="#Projects">PROJECTS</a>
+  <a href="Skills">SKILLS</a>
+  <a href="Photography">PHOTOGRAPHY</a>
+  <a href="#Contact">CONTACT</a>
 </div>
 
-<div class="content">
-  <h2 id="About">About Me</h2>
+<div id=About" class="content">
+  <h2>ABOUT</h2>
   <p> I am a technology professional with a passion for product design. 
       I’ve worked for tech startup for 4 years and enjoy the fast paces,
       collaborative environment involved in startups. I’ve taken courses 
       on design,  coding, and UI.  </p>
 </div>
 <hr>
-
-<div class="content">
-    <h2 id="Experience">Experience and Skills</h2>
+<div id="Projects" class="content">
+    <h2>PROJECTS</h2>
+    <div class=scroll-conatiner>
+        <p>An image that is a link<br>will go here</p>
+        <p>An image that is a link<br>will go here</p>
+        <p>An image that is a link<br>will go here</p>
+        <p>An image that is a link<br>will go here</p>
+        <p>An image that is a link<br>will go here</p>
+    </div>
+</div>  
+    
+<div id="Skills" class="content">
+    <h2>SKILLS</h2>
     <table>
         <tr> 
           <td>Ten Percent Happier</td>
@@ -52,33 +63,17 @@
     </table>
 </div>
 <hr>
-<div class="content">
-  <h2>About Me</h2>
-  <p> I am a technology professional with a passion for product design. 
-      I’ve worked for tech startup for 4 years and enjoy the fast paces,
-      collaborative environment involved in startups. I’ve taken courses 
-      on design,  coding, and UI.  </p>
+    
+<div id="Photography" class="content">
+  <h2>PHOTOGRAPHY</h2>
+  <p> I'll put another image gallery here.</p>
 </div>
 <hr>
 
-<div class="content">
-    <h2>Experience and Skills</h2>
-    <table>
-        <tr> 
-          <td>Ten Percent Happier</td>
-          <td>UI UX at <br>Dribbble Academy</td>
-        </tr>
-        <tr>
-            <td>AWS Basics at<br>Cloud Academy</td>
-            <td>SQL Basics at<br>CodeAcademy</td>
-        </tr>
-        <tr>   
-            <td>Glenville BioSoil Farm</td>
-            <td>Ellison Estate Vineyards</td> 
-        </tr> 
-    </table>
+<div id="Contact" class="content">
+    <h2>CONTACT</h2>
+    <p>My email, social media, dribbble account, will go here.</p>
 </div>
-<hr>
 
 <script>
 window.onscroll = function() {myFunction()};
