--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
 <div id="navbar">
   <a href="#Cassidy Stagnitti">CASSIDY STAGNITTI</a>
-  <a href="#About">ABOUT</a>
-  <a href="#Projects">PROJECTS</a>
-  <a href="Skills">SKILLS</a>
-  <a href="Photography">PHOTOGRAPHY</a>
-  <a href="#Contact">CONTACT</a>
+  <b href="#About">ABOUT</b>
+  <b href="#Projects">PROJECTS</b>
+  <b href="Skills">SKILLS</a>
+  <b href="Photography">PHOTOGRAPHY</b>
+  <b href="#Contact">CONTACT</b>
 </div>
 
 <div id=About" class="content">
