--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
   <a href="#Cassidy Stagnitti">CASSIDY STAGNITTI</a>
   <b href="#About">ABOUT</b>
   <b href="#Projects">PROJECTS</b>
-  <b href="Skills">SKILLS</a>
+  <b href="Skills">SKILLS</b>
   <b href="Photography">PHOTOGRAPHY</b>
   <b href="#Contact">CONTACT</b>
 </div>
 
-<div id=About" class="content">
+<div id="About" class="content">
   <h2>ABOUT</h2>
   <p> I am a technology professional with a passion for product design. 
       I’ve worked for tech startup for 4 years and enjoy the fast paces,
