--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <b href="#Contact">CONTACT</b>
 </div>
 
-<div id="About">
+<div id="About" class="content">
   <h2>ABOUT</h2>
   <p> I am a technology professional with a passion for product design. 
       I’ve worked for tech startup for 4 years and enjoy the fast paces,
@@ -34,7 +34,7 @@
       on design,  coding, and UI.  </p>
 </div>
 <hr>
-<div id="Projects">
+<div id="Projects" class="content">
     <h2>PROJECTS</h2>
     <div class=scroll-conatiner>
         <p>An image that is a link<br>will go here</p>
