--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 <div id="navbar">
   <a href="#Cassidy Stagnitti">CASSIDY STAGNITTI</a>
-  <b href="#About">ABOUT</b>
-  <b href="#Projects">PROJECTS</b>
+  <a href="#About">ABOUT</a>
+  <a href="#Projects">PROJECTS</a>
   <b href="Skills">SKILLS</b>
   <b href="Photography">PHOTOGRAPHY</b>
   <b href="#Contact">CONTACT</b>
