--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <a href="#Cassidy Stagnitti">CASSIDY STAGNITTI</a>
   <a href="#About">ABOUT</a>
   <a href="#Projects">PROJECTS</a>
-  <b href="Skills">SKILLS</b>
-  <b href="Photography">PHOTOGRAPHY</b>
-  <b href="#Contact">CONTACT</b>
+  <a href="#Skills">SKILLS</a>
+  <a href="#Photography">PHOTOGRAPHY</a>
+  <a href="#Contact">CONTACT</a>
 </div>
 
 <div id="About" class="content">
