--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="hero-text">
     <h1 id="cassidy">Cassidy</h1>
     <h1 id="stagnitti">Stagnitti</h1>
-    <p id="PMD">Product Management and Design</p>
+    <p id="PMD">Product Management<br>& Design</p>
   </div>
 </div>
 
