--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
 
 <div id="navbar">
   <a href="#Cassidy Stagnitti">CASSIDY STAGNITTI</a>
-  <a href="#About">ABOUT</a>
-  <a href="#Projects">PROJECTS</a>
-  <a href="#Skills">SKILLS</a>
-  <a href="#Photography">PHOTOGRAPHY</a>
-  <a href="#Contact">CONTACT</a>
+  <span>
+      <a href="#About">ABOUT</a>
+      <a href="#Projects">PROJECTS</a>
+      <a href="#Skills">SKILLS</a>
+      <a href="#Photography">PHOTOGRAPHY</a>
+      <a href="#Contact">CONTACT</a>
+  </span>
 </div>
 
 <div id="About" class="content">
