--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div id="Projects" class="content">
     <h2>PROJECTS</h2>
     <div class=scroll-conatiner>
-        <p>href url(cassidystagnitti.github.io/projectpage1.html)</p>
+        <a href"cassidystagnitti.github.io/projectpage1.html"Project 1</a>
         <p>An image that is a link<br>will go here</p>
         <p>An image that is a link<br>will go here</p>
         <p>An image that is a link<br>will go here</p>
