--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div id="navbar">
   <a href="#Cassidy Stagnitti">CASSIDY STAGNITTI</a>
-  <span>
+  <span class="navcontent">
       <a href="#About">ABOUT</a>
       <a href="#Projects">PROJECTS</a>
       <a href="#Skills">SKILLS</a>
