--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 </div>
 
 <div id="navbar">
-  <a href="#Cassidy Stagnitti">CASSIDY STAGNITTI</a>
-  <span class="navcontent">
+  <span class="nav-title"><a href="#Cassidy Stagnitti">CASSIDY STAGNITTI</a> </span>
+  <span class="nav-content">
       <a href="#About">ABOUT</a>
       <a href="#Projects">PROJECTS</a>
       <a href="#Skills">SKILLS</a>
