--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
 </div>
 
-<div id="navbar" class="content">
+<div id="navbar">
   <span class="nav-title"><a href="#Cassidy Stagnitti">CASSIDY STAGNITTI</a> </span>
   <span class="nav-content">
       <a href="#About">ABOUT</a>
