--- a/index.html
+++ b/index.html
@@ -39,11 +39,9 @@
 <div id="Projects" class="content">
     <h2>PROJECTS</h2>
     <div class=scroll-conatiner>
-        <a href="projectpage1.index.html">Project 1</a>
-        <p>An image that is a link<br>will go here</p>
-        <p>An image that is a link<br>will go here</p>
-        <p>An image that is a link<br>will go here</p>
-        <p>An image that is a link<br>will go here</p>
+        <img src="CarrotMan.JPG">
+        <img src="Jump.JPG">
+        <img src=Spencer1.JPG">
     </div>
 </div>  
     
