--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
 <hr>
 <div id="Projects" class="content">
     <h2>PROJECTS</h2>
+    <div class="container">
+        <image src="Frame 15.png" class="image">
+        <div class="overlay">
+            <div id="projectCard" class="container">
+                <p>This is where I'll put my image of my project work and also a bunch
+                of text about how it went and stuff</p>
+            </div>
+        </div>
+    </div>
+</div>  
 </div>  
     
 <div id="Skills" class="content">
