--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h2>PROJECTS</h2>
     <div class="container">
         <image src="Frame 15.png" class="image">
-        <p>Help Center Rebrand</p>
+        <p id="projectTitle">Help Center Rebrand</p>
         <div class="overlay">
             <div id="projectCard" class="container">
                 <p>This is where I'll put my image of my project work and also a bunch
