--- a/index.html
+++ b/index.html
@@ -36,20 +36,17 @@
       on design,  coding, and UI.  </p>
 </div>
 <hr>
-<div id="Projects" class="content">
+<div id="Projects" class="container">
     <h2>PROJECTS</h2>
         <image src="Frame 15.png" class="image">
-        <div class="container" id="projectTitle">
-        <p>Help Center Rebrand</p>
-        </div>
+        <p id="projectTitle">Help Center Rebrand</p>
         <div class="overlay">
             <div class="container">
                 <p>This is where I'll put my image of my project work and also a bunch
                 of text about how it went and stuff</p>
             </div>
         </div>
-    </div>
-</div>   
+    </div> 
     
 <div id="Skills" class="content">
     <h2>SKILLS</h2>
