--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <hr>
 <div id="Projects" class="container">
     <h2>PROJECTS</h2>
+</div>
     
 <div id="Skills" class="content">
     <h2>SKILLS</h2>
