--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
 </div>
 
-<div id="navbar">
+<div id="navbar" class="navbar">
   <span class="nav-title"><a href="#Cassidy Stagnitti">CASSIDY STAGNITTI</a> </span>
   <span class="nav-content">
       <a href="#About">ABOUT</a>
@@ -25,6 +25,9 @@
       <a href="#Skills">SKILLS</a>
       <a href="#Photography">PHOTOGRAPHY</a>
       <a href="#Contact">CONTACT</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+   </a>
   </span>
 </div>
 
@@ -83,6 +86,16 @@ function myFunction() {
     navbar.classList.remove("sticky");
   }
 }
+
+function myFunction() {
+  var x = document.getElementById("myNavbar");
+  if (x.className === "navbar") {
+    x.className += " responsive";
+  } else {
+    x.className = "navbar";
+  }
+}
+    
 </script>
 </body>
 </html>
