--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ function myFunction() {
 }
 
 function myFunction() {
-  var x = document.getElementById("myNavbar");
+  var x = document.getElementById("navbar");
   if (x.className === "navbar") {
     x.className += " responsive";
   } else {
