--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@ function myFunction() {
 }
 
 function myFunction() {
-  var x = document.getElementById("nav-content");
-  if (x.className === "nav-content") {
+  var x = document.getElementById("navbar");
+  if (x.className === "navbar") {
     x.className += " responsive";
   } else {
-    x.className = "nav-content";
+    x.className = "navbar";
   }
 }
     
