--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="#Photography">PHOTOGRAPHY</a>
       <a href="#Contact">CONTACT</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
+    <i class="fa fa-bars">MORE</i>
    </a>
   </span>
 </div>
