--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="#Skills">SKILLS</a>
       <a href="#Photography">PHOTOGRAPHY</a>
       <a href="#Contact">CONTACT</a>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <a href="javascript:void(0);" class="icon" onclick="myFunctionRWD()">
     <i class="fa fa-bars"></i>
    </a>
   </span>
@@ -87,7 +87,7 @@ function myFunction() {
   }
 }
 
-function myFunction() {
+function myFunctionRWD() {
   var x = document.getElementById("navbar");
   if (x.className === "navbar") {
     x.className += " responsive";
