--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cassidy Stagnitti</title>
     <link rel="stylesheet" href="RWD.css">
+    <script src="https://kit.fontawesome.com/4769a6b1c7.js" crossorigin="anonymous"></script>
    
 </head>
 <body>
