--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@ var sticky = navbar.offsetTop;
 
 function myFunction() {
   if (window.pageYOffset >= sticky) {
-    navbar.classList.add("sticky")
+    navbar.classList.add("sticky");
+    navbar.responsive.classList.add("sticky");
   } else {
     navbar.classList.remove("sticky");
   }
