--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <span class="nav-title"><a href="#Cassidy Stagnitti">CASSIDY STAGNITTI</a> </span>
   <span class="nav-content">
       <a href="#About">ABOUT</a>
-      <a href="#Projects">PROJECTS</a>
       <a href="#Skills">SKILLS</a>
+      <a href="Experience">EXPERIENCE</a>
       <a href="#Photography">PHOTOGRAPHY</a>
       <a href="#Contact">CONTACT</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunctionRWD()">
@@ -34,31 +34,30 @@
 
 <div id="About" class="content">
   <h2>ABOUT</h2>
-  <p> I am a technology professional with a passion for product design. 
-      I’ve worked for tech startup for 4 years and enjoy the fast paces,
-      collaborative environment involved in startups. I’ve taken courses 
-      on design,  coding, and UI.  </p>
+  <p> SaaS Customer Support specialist with an uncanny talent 
+      for fully utilizing tools and iterating on processes to  
+      provide the highest level of customer satisfaction through 
+      support, product, and design. I love remote work, self-management 
+      and holding myself accountable to clear expectations. 
+      Certified yoga instructor, dog owner, skier, runner, and cyclist. 
+      Fueled by nature and movement. Fulfilled by helping others.</p>
 </div>
-<hr>
-<div id="Projects" class="container">
-    <h2>PROJECTS</h2>
-</div>
-    
+<hr>  
 <div id="Skills" class="content">
     <h2>SKILLS</h2>
     <table>
         <tr> 
-          <td>Ten Percent Happier</td>
-          <td>UI UX at <br>Dribbble Academy</td>
+          <td>Demonstrated Skills</td>
+          <td>Developing Skills</td>
         </tr>
-        <tr>
-            <td>AWS Basics at<br>Cloud Academy</td>
-            <td>SQL Basics at<br>CodeAcademy</td>
+        <tr> 
+          <td>Reading API Documentation<br>Ten Percent Happier</td>
+          <td>Web Development<br>HTML, CSS, JavaScript</td>
+        </tr>  
+        <tr><  
+            <td>UI Fundementals<br>Dribbble Academy</td>
+            <td>SQL Basics<br>CodeAcademy</td>
         </tr>
-        <tr>   
-            <td>Glenville BioSoil Farm</td>
-            <td>Ellison Estate Vineyards</td> 
-        </tr> 
     </table>
 </div>
 <hr>
@@ -71,7 +70,9 @@
 
 <div id="Contact" class="content">
     <h2>CONTACT</h2>
-    <p>My email, social media, dribbble account, will go here.</p>
+    <p a href="mailto:cassidystagnitti@gmail.com">EMAIL</p>
+    <p a href="https://www.linkedin.com/in/cassidy-stagnitti/">LinkedIn</p>
+    <p a href="https://dribbble.com/CassidyStag">DRIBBBLE</p>
 </div>
 
 <script>
