--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
     <h2>SKILLS</h2>
     <table>
         <tr> 
+         <span id="skillSpan">
           <td>Demonstrated Skills</td>
           <td>Developing Skills</td>
+         </span>
         </tr>
         <tr> 
           <td>Reading API Documentation<br>Ten Percent Happier</td>
