--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
     <table>
         <tr> 
          <span id="skillSpan">
-          <td>Demonstrated Skills</td>
-          <td>Developing Skills</td>
+          <td>Writing Custom APIs<br>Ten Percent Happier</td>
+          <td>Reading API Documentation<br>Ten Percent Happier</td>
          </span>
         </tr>
         <tr> 
-          <td>Reading API Documentation<br>Ten Percent Happier</td>
+          <td>Business and Technical Writing<br>Ten Percent Happier</td>
           <td>Web Development<br>HTML, CSS, JavaScript</td>
         </tr>  
         <tr> 
             <td>UI Fundementals<br>Dribbble Academy</td>
-            <td>SQL Basics<br>CodeAcademy</td>
+            <td>SQL Basics<br>CodeAcademy, W3Schools</td>
         </tr>
     </table>
 </div>
