--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </tr>  
         <tr> 
             <td>UI Fundementals<br>Dribbble Academy</td>
-            <td>SQL Basics<br>CodeAcademy, W3Schools</td>
+            <td><span id="Learning">Learning</span>SQL Basics<br>CodeAcademy, W3Schools</td>
         </tr>
     </table>
 </div>
