--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
 
+<div id="popup">
+    <p>THIS PAGE IS UNDER CONSTRUCTION<br>Enjoy checking it out!</p>
+</div>
+    
+
 <div id="Cassidy Stagnitti" class="hero-image">
   <div class="hero-text">
     <h1 id="cassidy">Cassidy</h1>
