--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div id="popup">
-    <p>THIS PAGE IS UNDER CONSTRUCTION<br>Enjoy checking it out!</p>
+    <p>THIS PAGE IS UNDER CONSTRUCTION<br><span id="popuptext">Enjoy checking it out!</span></p>
 </div>
     
 
