--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
 
 <div id="Contact" class="content">
     <h2>CONTACT</h2>
-    <p a href="mailto:cassidystagnitti@gmail.com">EMAIL</p>
-    <p a href="https://www.linkedin.com/in/cassidy-stagnitti/">LinkedIn</p>
-    <p a href="https://dribbble.com/CassidyStag">DRIBBBLE</p>
+    <a href="mailto:cassidystagnitti@gmail.com">cassidystagnitti@gmail.com</a>
+    <a href="https://www.linkedin.com/in/cassidy-stagnitti/">LinkedIn</a>
 </div>
 
 <script>
