--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
 
 <div id="Contact" class="content">
     <h2>CONTACT</h2>
+    <span id="contantLinks">
     <a href="mailto:cassidystagnitti@gmail.com">cassidystagnitti@gmail.com</a>
     <a href="https://www.linkedin.com/in/cassidy-stagnitti/">LinkedIn</a>
+    </span>
 </div>
 
 <script>
